--- a/app/src/main/res/layout/item_play_list_net.xml
+++ b/app/src/main/res/layout/item_play_list_net.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/mp.list.itemHeight"
+    android:layout_height="86dp"
     android:background="@color/mp.list.background"
     >
 
@@ -17,9 +17,9 @@
     <!--android:background="?attr/selectableItemBackground"-->
 
     <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/image_view_album"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:id="@+id/image_view_album_net"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:scaleType="center"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/mp.padding.large"
@@ -28,33 +28,33 @@
         />
 
     <LinearLayout
-        android:id="@+id/ll_recommend_song_play"
+        android:id="@+id/ll_recommend_song_play_net"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/image_view_album"
-        android:layout_toEndOf="@+id/image_view_album"
-        android:layout_toLeftOf="@+id/layout_action"
-        android:layout_toStartOf="@+id/layout_action"
+        android:layout_toRightOf="@+id/image_view_album_net"
+        android:layout_toEndOf="@+id/image_view_album_net"
+        android:layout_toLeftOf="@+id/layout_action_net"
+        android:layout_toStartOf="@+id/layout_action_net"
         >
 
         <TextView
             style="@style/MP.Theme.TextAppearance.List.Title"
-            android:id="@+id/text_view_name"
+            android:id="@+id/text_view_name_net"
             tools:text="Favorite"
             />
 
         <TextView
             style="@style/MP.Theme.TextAppearance.List.Hint"
-            android:id="@+id/text_view_info"
+            android:id="@+id/text_view_info_net"
             android:layout_marginTop="@dimen/mp.margin.small"
             tools:text="100 songs"
             />
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/layout_action"
+        android:id="@+id/layout_action_net"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
@@ -65,7 +65,7 @@
         >
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/image_button_action"
+            android:id="@+id/image_button_action_net"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
