音乐评论； 审核评论；

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -34,8 +34,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="我要评论"
-            android:layout_marginLeft="3dp"
+            android:hint="搜索关键词"
+            android:layout_marginLeft="9dp"
             android:background="@drawable/textview_bg"
             android:textColorHint="@color/whileGray"
             android:maxLines="2" />
