--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.change_password">
+    tools:context=".ui.settings.ChangePassword">
     <LinearLayout
         android:id="@+id/change_password_detail"
         android:layout_width="match_parent"
