--- a/app/src/main/res/layout/activity_music_play_setting.xml
+++ b/app/src/main/res/layout/activity_music_play_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.music_play_setting">
+    tools:context=".ui.settings.MusicPlaySetting">
     <LinearLayout
         android:id="@+id/music_play_setting_detail"
         android:layout_width="wrap_content"
