--- a/app/src/main/res/layout/fragment_added_folders.xml
+++ b/app/src/main/res/layout/fragment_added_folders.xml
@@ -65,6 +65,7 @@
                         />
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/ll_recommend_everyday"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -89,6 +90,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_recommend_top"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
