--- a/app/src/main/res/layout/item_music_comment.xml
+++ b/app/src/main/res/layout/item_music_comment.xml
@@ -4,21 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_comment_user_msg"
         android:layout_marginTop="18dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginLeft="10dp"
         android:orientation="horizontal">
         <ImageView
         android:id="@+id/img_comment_user_pic"
         android:layout_width="40dp"
         android:layout_height="40dp"
+            android:layout_centerVertical="true"
         android:src="@mipmap/ic_launcher"/>
         <LinearLayout
+            android:id="@+id/ll_comment_user_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/img_comment_user_pic"
             android:layout_marginLeft="30dp"
             android:orientation="vertical">
             <TextView
@@ -27,6 +31,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:textSize="15sp"
                 android:text="userName"/>
             <TextView
                 android:id="@+id/tv_comment_time"
@@ -36,8 +41,27 @@
                 android:text="2020-04-27"
                 />
         </LinearLayout>
-
-    </LinearLayout>
+        <FrameLayout
+            android:id="@+id/comment_layout_action"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/mp.margin.large"
+            android:paddingLeft="@dimen/mp.margin.large"
+            android:visibility="gone"
+            >
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/image_button_action"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_list_item_action"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                />
+        </FrameLayout>
+    </RelativeLayout>
     <TextView
         android:id="@+id/tv_comment_content"
         android:layout_width="match_parent"
