--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,6 +136,10 @@
     <style name="MP.Theme.TextAppearance.Toolbar">
         <item name="android:textSize">18sp</item>
     </style>
+    <style name="MP.Theme.TextAppearance.Toolbar.ExpandedTitle">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="MP.Theme.TextAppearance.Light.Toolbar.Title" parent="MP.Theme.TextAppearance.Toolbar">
         <item name="android:textColor">@color/ToolBarTextColor</item>
