--- a/app/src/main/res/layout/activity_account_bind_activitity.xml
+++ b/app/src/main/res/layout/activity_account_bind_activitity.xml
@@ -5,17 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.settings.AccountBindActivitity">
+
 <LinearLayout
     android:id="@+id/set_account_bind"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/setting_background">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_account_bind_title"
+        xmlns:appBarLayout="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        appBarLayout:expanded="true"
+        appBarLayout:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/setting_background"
+        >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/app_accout_bind_toolbar"
+            xmlns:toolbar="http://schemas.android.com/apk/res-auto"
+            style="@style/MP.Theme.Widget.Toolbar"
+            toolbar:layout_scrollFlags="enterAlways"
+            />
+    </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
         android:id="@+id/change_email"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/white"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="0dp"
+        android:backgroundTint="@color/setting_primary"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -41,6 +61,7 @@
         android:layout_height="44dp"
         android:background="@color/white"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@color/setting_primary"
         >
         <TextView
             android:layout_width="wrap_content"
