--- a/app/src/main/res/layout/activity_app_about.xml
+++ b/app/src/main/res/layout/activity_app_about.xml
@@ -9,13 +9,46 @@
         android:id="@+id/app_about"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/setting_background"
+        >
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_about_title"
+            xmlns:appBarLayout="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            appBarLayout:expanded="true"
+            appBarLayout:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:background="@color/setting_background"
+            >
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/app_about_toolbar"
+                xmlns:toolbar="http://schemas.android.com/apk/res-auto"
+                style="@style/MP.Theme.Widget.Toolbar"
+                toolbar:layout_scrollFlags="enterAlways"
+                />
+        </android.support.design.widget.AppBarLayout>
+
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/setting_background"-->
+            <!--&gt;-->
+            <!--<android.support.v7.widget.Toolbar-->
+                <!--android:id="@+id/setting_about_toolbar"-->
+                <!--style="@style/MP.Theme.Widget.Toolbar"-->
+
+                <!--app:navigationIcon="@mipmap/tomato_50_1"-->
+                <!--app:subtitle="关于"-->
+                <!--/>-->
+        <!--</android.support.design.widget.AppBarLayout>-->
+
         <RelativeLayout
             android:id="@+id/app_check_update"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/white"
-            android:layout_marginTop="45dp"
+            android:background="@color/setting_primary"
+            android:layout_marginTop="10dp"
             >
             <TextView
                 android:layout_width="wrap_content"
