--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:background="@color/setting_background"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.login.LoginActivity"
+    >
 
     <!-- Login progress -->
     <ProgressBar
@@ -31,8 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"
-            android:src="@mipmap/music_solid_240"/>
+            android:layout_marginTop="25dp"
+            android:src="@mipmap/shishi_7"/>
+        <!--android:layout_marginTop="50dp"-->
+        <!--android:src="@mipmap/music_solid_240"-->
 
         <LinearLayout
             android:id="@+id/email_login_form"
