--- a/app/src/main/res/layout/activity_music_play_setting.xml
+++ b/app/src/main/res/layout/activity_music_play_setting.xml
@@ -4,7 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.music_play_setting">
+    tools:context=".ui.settings.music_play_setting"
+    android:background="@color/setting_background">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_music_play_setting_title"
+        xmlns:appBarLayout="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        appBarLayout:expanded="true"
+        appBarLayout:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/setting_background"
+        >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/app_music_play_setting_toolbar"
+            xmlns:toolbar="http://schemas.android.com/apk/res-auto"
+            style="@style/MP.Theme.Widget.Toolbar"
+            toolbar:layout_scrollFlags="enterAlways"
+            />
+    </android.support.design.widget.AppBarLayout>
+
     <LinearLayout
         android:id="@+id/music_play_setting_detail"
         android:layout_width="wrap_content"
