--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,8 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"
-            android:src="@mipmap/music_210"/>
+            android:layout_marginTop="10dp"
+            android:src="@mipmap/shishi_7"/>
+        <!--android:layout_marginTop="50dp"-->
+        <!--android:src="@mipmap/music_210"-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
