--- a/app/src/main/res/layout/activity_handle_feedback.xml
+++ b/app/src/main/res/layout/activity_handle_feedback.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.feedback.HandleFeedbackActivity"
     android:orientation="vertical"
-    tools:context=".ui.comment.MusicCommentActivity">
+    android:background="@color/setting_background">
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_handle_feedback_setting_title"
         xmlns:appBarLayout="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/appb_music_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         appBarLayout:expanded="true"
@@ -16,55 +17,36 @@
         android:background="@color/setting_background"
         >
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_music_comment"
+            android:id="@+id/app_handle_feedback_setting_toolbar"
             xmlns:toolbar="http://schemas.android.com/apk/res-auto"
             style="@style/MP.Theme.Widget.Toolbar"
             toolbar:layout_scrollFlags="enterAlways"
             />
     </android.support.design.widget.AppBarLayout>
 
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appb_music_comment"
-        android:layout_above="@id/ll_comment_input">
+        android:layout_below="@id/"
+        android:layout_above="@id/">
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_music_comment"
+            android:id="@+id/rv_handle_feedback"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="1dp"
             android:clipToPadding="false"
-            tools:listitem="@layout/item_music_comment"
+            tools:listitem="@layout/"
             />
     </android.support.v4.widget.NestedScrollView>
 
 
 
+
     <LinearLayout
-        android:id="@+id/ll_comment_input"
-        android:layout_width="match_parent"
+        android:id="@+id/handle_feedback_setting_detail"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/setting_background"
-        android:layout_alignParentBottom="true">
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/comment_input_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="我要评论"
-            android:layout_marginLeft="3dp"
-            android:background="@drawable/textview_bg"
-            android:textColorHint="@color/whileGray"
-            android:maxLines="2" />
-
-        <Button
-            android:id="@+id/comment_input_send"
-            android:layout_width="90dp"
-            android:layout_height="38dp"
-            android:layout_marginLeft="5sp"
-            android:background="@drawable/button_bg"
-            android:text="发表" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
