--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity"
-    >
+    tools:context=".ui.settings.login.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -34,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
-            android:src="@mipmap/shishi_7"/>
+            android:src="@mipmap/register_login_head"/>
         <!--android:layout_marginTop="50dp"-->
         <!--android:src="@mipmap/music_solid_240"-->
 
