--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:src="@mipmap/shishi_7"/>
+            android:src="@mipmap/register_login_head"/>
         <!--android:layout_marginTop="50dp"-->
         <!--android:src="@mipmap/music_210"-->
         <LinearLayout
