--- a/app/src/main/res/layout/fragment_added_folders.xml
+++ b/app/src/main/res/layout/fragment_added_folders.xml
@@ -28,18 +28,20 @@
                 android:layout_marginTop="10dp"
                 />
             <View
-                android:id="@+id/banner_fanqie_space"
+                android:id="@+id/banner_space"
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
                 app:layout_constraintTop_toBottomOf="@id/banner"
-                android:background="@color/setting_background"
+                android:background="@color/white"
                 />
             <LinearLayout
                 android:id="@+id/bottom_of_bannerRecommend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/banner_fanqie_space"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/banner_space"
                 >
                 <LinearLayout
                     android:id="@+id/test_internet_music"
@@ -51,12 +53,12 @@
                     <ImageView
                         android:id="@+id/recommend_2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="25dp"
                         android:layout_weight="1"
-                        android:src="@mipmap/tomato_50_1" />
+                        android:src="@mipmap/search_35" />
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="15dp"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal"
                         android:text="在线搜索"
@@ -74,15 +76,15 @@
                     <ImageView
                         android:id="@+id/recommend_1"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="25dp"
                         android:layout_weight="1"
-                        android:src="@mipmap/tomato_50_1" />
+                        android:src="@mipmap/recommend_40" />
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="15dp"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal"
-                        android:text="每日推荐"
+                        android:text="每日星选"
                         android:textColor="@color/setting_font_color"
                         android:textSize="10dp"
 
@@ -99,12 +101,12 @@
                     <ImageView
                         android:id="@+id/recommend_3"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="25dp"
                         android:layout_weight="1"
-                        android:src="@mipmap/tomato_50_1" />
+                        android:src="@mipmap/rank_35" />
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="15dp"
                         android:layout_weight="1"
                         android:layout_gravity="center_horizontal"
                         android:text="排行榜"
@@ -114,7 +116,14 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            <View
+                android:id="@+id/banner_space_2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                app:layout_constraintTop_toBottomOf="@id/bottom_of_bannerRecommend"
+                android:background="@color/setting_background"
+                />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_press_category_novel_list"
