--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -25,15 +25,16 @@
             android:layout_centerInParent="true"
             />
 
-        <ImageView
-            android:id="@+id/img_music_comment"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="0dp"
-            app:srcCompat="@drawable/ic_favorite_yes" />
+        <!--<ImageView-->
+            <!--android:id="@+id/img_music_comment"-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_marginRight="16dp"-->
+            <!--android:layout_marginBottom="0dp"-->
+            <!--app:srcCompat="@drawable/ic_favorite_yes"-->
+           <!--/>-->
     </RelativeLayout>
 
     <TextView
