--- a/app/src/main/res/layout/item_category_music.xml
+++ b/app/src/main/res/layout/item_category_music.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
-    android:background="@color/shishijiushishi">
+    android:background="@color/white">
     <android.support.v7.widget.CardView
         android:id="@+id/iv_item_category_novel_cover_card"
         android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
             android:id="@+id/iv_item_category_novel_cover"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@mipmap/tomato_50_1"
+            android:src="@mipmap/ic_launcher"
             android:scaleType="fitXY"/>
     </android.support.v7.widget.CardView>
     <TextView
@@ -30,7 +30,7 @@
         android:layout_below="@id/iv_item_category_novel_cover_card"
         android:text="歌单名"
         android:textColor="@color/setting_font_color"
-        android:textSize="14sp"
+        android:textSize="15dp"
         android:gravity="center"
         android:maxLines="1"
         android:ellipsize="end"/>
