--- a/app/src/main/res/layout/activity_submit_feedback.xml
+++ b/app/src/main/res/layout/activity_submit_feedback.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.feedback.SubmitFeedbackActivity"
+    tools:context=".ui.settings.feedback.SubmitFeedbackActivity"
     android:orientation="vertical"
     android:background="@color/setting_background">
     <android.support.design.widget.AppBarLayout
@@ -24,28 +24,54 @@
             />
     </android.support.design.widget.AppBarLayout>
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal">
+        <CheckBox
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="播放卡顿"/>
+        <CheckBox
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="闪退"/>
+        <CheckBox
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="功能异常"/>
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/submit_feedback_setting_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         >
-        <!--<TextView-->
-            <!--android:layout_width="50mm"-->
-            <!--android:layout_height="30dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:textColor="@color/setting_font_color"-->
-            <!--android:text="在中间"-->
-            <!--android:visibility="visible"-->
-            <!--/>-->
         <EditText
             android:id="@+id/edit_submit_feedback"
-            android:layout_width="50mm"
+            android:layout_width="290dp"
             android:layout_height="200dp"
             android:layout_marginTop="25dp"
             android:background="@color/setting_primary"
             android:textColor="@color/setting_font_color"
+            android:gravity="top"
+            android:paddingTop="20sp"
+            android:hint="@string/feed_back_hint"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="15sp"
+            android:text="@string/feed_back_hint_text"/>
         <Button
             android:id="@+id/button_submit_feedback"
             android:layout_width="match_parent"
@@ -53,7 +79,6 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/setting_primary"
             android:textColor="@color/setting_font_color"
-            android:layout_marginTop="40dp"
 
             android:text="提交反馈"
             />
