--- a/app/src/main/res/layout/item_feedback_handle.xml
+++ b/app/src/main/res/layout/item_feedback_handle.xml
@@ -1,6 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</android.support.constraint.ConstraintLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
+        android:id="@+id/ll_comment_user_msg"
+        android:layout_marginTop="18dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginLeft="10dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/img_feedback_user_pic"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_launcher"/>
+        <LinearLayout
+            android:id="@+id/ll_feedback_user_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/img_feedback_user_pic"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_feedback_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textSize="15sp"
+                android:text="userName"/>
+            <TextView
+                android:id="@+id/tv_feedback_time"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="2020-04-27"
+                />
+        </LinearLayout>
+        <FrameLayout
+            android:id="@+id/feedback_layout_action"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/mp.margin.large"
+            android:paddingLeft="@dimen/mp.margin.large"
+            >
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/feedback_image_button_action"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:scaleType="center"
+                app:srcCompat="@drawable/ic_list_item_action"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                />
+        </FrameLayout>
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_feedback_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="18dp"
+        android:layout_below="@id/ll_comment_user_msg"
+        android:text="qwqwqwqwqwqwqwqwqwqww"/>
+    <TextView
+        android:id="@+id/tv_feedback_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="20dp"
+        android:textSize="15sp"
+        android:layout_below="@id/tv_feedback_content"
+        android:text="管理员回复:"/>
+    <TextView
+        android:id="@+id/tv_feedback_feed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="18dp"
+        android:layout_below="@id/tv_feedback_hint"
+        android:text="qwqwqwqwqwqwqwqwqwqww"/>
+</RelativeLayout>
