--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -44,13 +44,39 @@
             android:src="@mipmap/little_point_right_25"/>
     </RelativeLayout>
 
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/setting_little_background"-->
+        <!--android:background="@color/setting_primary"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--&gt;-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="30dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:textSize="@dimen/setting_text_size"-->
+            <!--android:textColor="@color/setting_font_color"-->
+            <!--android:text="消息通知"/>-->
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@mipmap/little_point_right_2                                      5"/>-->
+    <!--</RelativeLayout>-->
     <RelativeLayout
+        android:id="@+id/handle_feedback"
         android:layout_width="match_parent"
         android:layout_height="@dimen/setting_little_background"
         android:background="@color/setting_primary"
         android:layout_marginTop="10dp"
         >
         <TextView
+            android:id="@+id/tv_handle_feedback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -58,7 +84,7 @@
             android:layout_centerVertical="true"
             android:textSize="@dimen/setting_text_size"
             android:textColor="@color/setting_font_color"
-            android:text="消息通知"/>
+            android:text="处理反馈"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,32 +121,32 @@
             android:src="@mipmap/little_point_right_25"/>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/upload_music_setting"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/setting_little_background"
-        android:layout_marginTop="@dimen/setting_space"
-        android:background="@color/setting_primary">
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/upload_music_setting"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/setting_little_background"-->
+        <!--android:layout_marginTop="@dimen/setting_space"-->
+        <!--android:background="@color/setting_primary">-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:text="上传音乐"
-            android:textColor="@color/setting_font_color"
-            android:textSize="@dimen/setting_text_size" />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="30dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:text="上传音乐"-->
+            <!--android:textColor="@color/setting_font_color"-->
+            <!--android:textSize="@dimen/setting_text_size" />-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:src="@mipmap/little_point_right_25" />
-    </RelativeLayout>
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:src="@mipmap/little_point_right_25" />-->
+    <!--</RelativeLayout>-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/setting_little_background"
@@ -169,32 +195,7 @@
             android:layout_centerVertical="true"
             android:src="@mipmap/little_point_right_25"/>
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/handle_feedback"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/setting_little_background"
-        android:background="@color/setting_primary"
-        android:layout_marginTop="@dimen/setting_space"
-        >
-        <TextView
-            android:id="@+id/tv_handle_feedback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_centerVertical="true"
-            android:textSize="@dimen/setting_text_size"
-            android:textColor="@color/setting_font_color"
-            android:text="处理反馈"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/little_point_right_25"/>
-    </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/setting_check_comment"
         android:layout_width="match_parent"
