--- a/app/src/main/res/layout/activity_account_bind_activitity.xml
+++ b/app/src/main/res/layout/activity_account_bind_activitity.xml
@@ -28,13 +28,38 @@
             toolbar:layout_scrollFlags="enterAlways"
             />
     </android.support.design.widget.AppBarLayout>
-
+    <RelativeLayout
+        android:id="@+id/change_picture"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/setting_primary"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_centerVertical="true"
+            android:textSize="18dp"
+            android:textColor="@color/setting_font_color"
+            android:text="更改头像"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/little_point_right_25"/>
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/change_email"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/white"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/setting_primary"
         >
         <TextView
