--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -1,11 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/setting_background"
     tools:context=".ui.settings.ChangeEmail"
+    android:orientation="vertical"
     >
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/change_email_title"
+        xmlns:appBarLayout="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        appBarLayout:expanded="true"
+        appBarLayout:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/setting_background"
+        >
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/change_email_toolbar"
+            xmlns:toolbar="http://schemas.android.com/apk/res-auto"
+            style="@style/MP.Theme.Widget.Toolbar"
+            toolbar:layout_scrollFlags="enterAlways"
+            />
+    </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:id="@+id/change_email_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="120dp">
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/email_change_email_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/setting_font_color"
+                    android:textSize="20dp"
+                    android:text="新邮箱"/>
+                <android.support.design.widget.TextInputLayout
+                    app:hintEnabled="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/change_email_email"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/login_font"
+                        android:textSize="18dp"
+                        android:hint="UserName"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        />
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/setting_font_color"
+                    android:textSize="20dp"
+                    android:text="  密码  "/>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintEnabled="false">
+
+                    <EditText
+                        android:id="@+id/change_email_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:textColorHint="@color/login_font"
+                        android:textSize="18dp"
+                        android:hint="Password"
+                        android:imeActionId="6"
+                        android:imeActionLabel="@string/action_sign_in_short"
+                        android:imeOptions="actionUnspecified"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/email_change_email_button"
+                android:layout_width="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="55dp"
+                android:textSize="23dp"
+                android:textColor="@color/setting_font_color"
+                android:background="#8c179172"
+                android:text="修改"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
