--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths>
-    <external-path
-        name="files_root"
-        path="Android/data/com.GraduationDesign.MusicPlayer/" />
 
-    <external-path
-        name="external_storage_root"
-        path="." />
-</paths>
+<resources>
+    <paths >
+        <external-path
+            name="files_root"
+            path="Android/data/com.GraduationDesign.MusicPlayer/" />
+
+        <external-path
+            name="external_storage_root"
+            path="." />
+        <external-path path="" name="camera_photos" />
+    </paths>
+</resources>
