个性化推荐（歌单）； 编辑头像；

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -61,4 +61,9 @@
             tools:listitem="@layout/item_music_comment"
             />
     </android.support.v4.widget.NestedScrollView>
+    <ProgressBar
+        android:id="@+id/search_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
